# pico-SSD1306

./: ssd1306Test.c
helloWorld/: CMakeLists.txt  main.txt  ssd1306TestVer2.c
pico-SSD1306/: CMakeLists.txt  getting_temperature.c  i2cAddressCheck.c  ssd1306Test.c
